1.TextView結果顯示完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PlusCouponCheck</string>
+    <string name="app_name">振興五倍加碼券速查</string>
     <string name="enter_hint">請輸入要查詢的身分證字號後三碼</string>
     <string name="btn_check" >點我檢查</string>
 </resources>
